Обробка помилок у TeXProjectManager